Crash when switch layer on texture paint mode #55349

Closed
opened 2018-06-06 14:35:12 +02:00 by Dutrieux Olivier · 6 comments

System Information
Windows 10 x64 pro & Nvidia 780

Blender Version
Broken: 2.79b

Short description of error
Crash when switch layer on texture paint mode

Exact steps for others to reproduce the error
Check this video to see the process to reproduce the problem : https://youtu.be/pdbkQPop3Bg

attach file : 8.7-Projection d’image en mode stencil.blend

Best regards

**System Information** Windows 10 x64 pro & Nvidia 780 **Blender Version** Broken: 2.79b **Short description of error** Crash when switch layer on texture paint mode **Exact steps for others to reproduce the error** Check this video to see the process to reproduce the problem : https://youtu.be/pdbkQPop3Bg attach file : [8.7-Projection d’image en mode stencil.blend](https://archive.blender.org/developer/F3601617/8.7-Projection_d_image_en_mode_stencil.blend) Best regards

Added subscriber: @dutrieux

Added subscriber: @dutrieux
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-06-06 15:55:29 +02:00
Member

Confirmed.
PAINT_OT_add_texture_paint_slot needs another poll. Can do tomorrow.

Confirmed. `PAINT_OT_add_texture_paint_slot` needs another poll. Can do tomorrow.
Member

Excuse the little detour here:

atm. PAINT_OT_add_texture_paint_slot just polls with ED_operator_region_view3d_active. (this seems unneccessary, op could actually work without 3dview...)
BUT: it should make sure we have an active object.
Thing is that when you switch to another layer (so that you selected/active object is on a hidden layer), then context.active_object (CTX_data_active_object) is actually None.
Thats not good, so we have to make sure we have some valid CTX_data_active_object.

Lots of operators use ED_operator_object_active for their poll, so intuition would be to just use this one.
BUT: this will either return context.object OR context.active_object, so valid active object is still not ensured... (would still crash)

Seems to me we have two possible solutions:

  • use custom poll that just prevents usage in this case (see D3466)
  • use standard ED_operator_object_active poll and get object with ED_object_active_context (instead of CTX_data_active_object) (see D3467)
Excuse the little detour here: atm. `PAINT_OT_add_texture_paint_slot` just polls with `ED_operator_region_view3d_active`. (this seems unneccessary, op could actually work without 3dview...) BUT: it should make sure we have an active object. Thing is that when you switch to another layer (so that you selected/active object is on a hidden layer), then context.active_object (`CTX_data_active_object`) is actually None. Thats not good, so we have to make sure we have some valid `CTX_data_active_object`. Lots of operators use `ED_operator_object_active` for their poll, so intuition would be to just use this one. BUT: this will either return context.object OR context.active_object, so valid active object is still not ensured... (would still crash) Seems to me we have two possible solutions: - [x] use custom poll that just prevents usage in this case (see [D3466](https://archive.blender.org/developer/D3466)) - [x] use standard `ED_operator_object_active` poll and get object with `ED_object_active_context` (instead of `CTX_data_active_object`) (see [D3467](https://archive.blender.org/developer/D3467))

This issue was referenced by 474a145d78

This issue was referenced by 474a145d78ff9870e24fe6a2969bce6375da0754
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55349
No description provided.